pamc/src/tests/sample_code/should_fail/type_check/duplicate_match_case.ph
type U {
    .U: U,
}

type Bool {
    .True: Bool,
    .False: Bool,
}

let foo = match U.U {
    .U => Bool.True,
    .U => Bool.False,
};
